Botones para dificultad del juego

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
    <canvas id="display"></canvas>
    <br>
    <button type="button" id="sacar">SACAR</button>
+   <p> DIFICULTAD DEL JUEGO</p>
+   <button type="button" id="vel1">1</button>
+   <button type="button" id="vel2">2</button>
+   <button type="button" id="vel3">3</button>
   </body>
 </html>
