--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="pong-01.js"> </script>
   </head>
   <body onload="main();">
-   <p>Mi juego del pong...</p>
+   <p id = "titulo">PONG</p>
    <canvas id="display"></canvas>
    <br>
    <button type="button" id="sacar">SACAR</button>
-   <p> DIFICULTAD DEL JUEGO</p>
+   <p id = "dif"> DIFICULTAD DEL JUEGO</p>
    <button type="button" id="vel1">1</button>
    <button type="button" id="vel2">2</button>
    <button type="button" id="vel3">3</button>
