--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="pong-01.js"> </script>
   </head>
   <body onload="main();">
-   <p id = "titulo">PONG</p>
+   <img id= "image" src="screen-0.jpg">
    <canvas id="display"></canvas>
    <br>
    <button type="button" id="sacar">SACAR</button>
