--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
     <script src="pong-01.js"> </script>
   </head>
   <body onload="main();">
+  <div id = "game">
    <img id= "image" src="screen-0.jpg">
    <canvas id="display"></canvas>
    <br>
-   <button type="button" id="sacar">SACAR</button>
-   <p id = "dif"> DIFICULTAD DEL JUEGO</p>
-   <button type="button" id="vel1">1</button>
-   <button type="button" id="vel2">2</button>
-   <button type="button" id="vel3">3</button>
+   <div class = "seccion1">
+     <div id = "derecha">
+       <p> START </p>
+      <button type="button" id="sacar"></button>
+     </div>
+    <div id = "izquierda">
+     <p> RESET </p>
+     <button type="button" id="reiniciar"></button></div>
+  </div>
+  <div class = "seccion2">
+    <p id = "dif"> DIFICULTAD</p>
+    <button type="button" id="vel1">1</button>
+    <button type="button" id="vel2">2</button>
+    <button type="button" id="vel3">3</button>
+ </div>
+</div>
   </body>
 </html>
