Botón reinicio y css

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <div id = "game">
    <img id= "image" src="screen-0.jpg">
    <canvas id="display"></canvas>
-   <br>
+   <p id = "mark">Monica's GAME BOY</p>
    <div class = "seccion1">
      <div id = "derecha">
        <p> START </p>
-      <button type="button" id="sacar"></button>
+      <button type="button" class = "button" id="sacar"></button>
      </div>
     <div id = "izquierda">
      <p> RESET </p>
      <button type="button" id="reiniciar"></button></div>
   </div>
   <div class = "seccion2">
-    <p id = "dif"> DIFICULTAD</p>
-    <button type="button" id="vel1">1</button>
-    <button type="button" id="vel2">2</button>
-    <button type="button" id="vel3">3</button>
+    <p id = "dif"> Select your difficulty</p>
+    <button type="button" id="vel1">EASY</button>
+    <button type="button" id="vel2">MEDIUM</button>
+    <button type="button" id="vel3">HARD</button>
  </div>
 </div>
   </body>
